@@ -89,7 +89,7 @@ zbx_graph_item_type;
 
 #define INTERFACE_DNS_LEN		64
 #define INTERFACE_DNS_LEN_MAX		INTERFACE_DNS_LEN+1
-#define INTERFACE_IP_LEN		39
+#define INTERFACE_IP_LEN		64
 #define INTERFACE_IP_LEN_MAX		INTERFACE_IP_LEN+1
 #define INTERFACE_ADDR_LEN		64	/* MAX(INTERFACE_DNS_LEN,INTERFACE_IP_LEN) */
 #define INTERFACE_ADDR_LEN_MAX		INTERFACE_ADDR_LEN+1
